--- a/styles/header.css
+++ b/styles/header.css
@@ -9,6 +9,8 @@
   top: 0;
   left: 0;
   right: 0;
+  z-index: 100;
+
   background-color: white;
   border-bottom-width: 1px;
   border-bottom-style: solid;
@@ -18,6 +20,7 @@
 .left_section {
   display: flex;
   align-items: center;
+  cursor: pointer;
 }
 
 .hamburger_menu {
@@ -61,11 +64,54 @@
   border: 1px solid rgb(192, 192, 192);
   margin-left: -1px;
   margin-right: 10px;
+
+  position: relative;
+}
+
+.search_button,
+.voice_search_button,
+.upload_icon_container,
+.youtube_apps_icon_container,
+.notification_icon_container,
+.channel_user_picture_container {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  position: relative;
+  cursor: pointer;
+}
+
+.search_button .tooltip,
+.voice_search_button .tooltip,
+.upload_icon_container .tooltip,
+.youtube_apps_icon_container .tooltip,
+.notification_icon_container .tooltip,
+.channel_user_picture_container .tooltip {
+  font-family: Roboto, Arial;
+  position: absolute;
+  background-color: gray;
+  color: white;
+  padding: 4px 8px;
+  border-radius: 2px;
+  font-size: 12px;
+  bottom: -30px;
+  opacity: 0;
+  transition: opacity 0.15s;
+  pointer-events: none;
+  white-space: nowrap;
+}
+
+.search_button:hover .tooltip,
+.voice_search_button:hover .tooltip,
+.upload_icon_container:hover .tooltip,
+.youtube_apps_icon_container:hover .tooltip,
+.notification_icon_container:hover .tooltip,
+.channel_user_picture_container:hover .tooltip {
+  opacity: 1;
 }
 
 .search_icon {
   height: 25px;
-  margin-top: 4px;
 }
 
 .voice_search_button {
@@ -78,7 +124,6 @@
 
 .voice_search_icon {
   height: 24px;
-  margin-top: 4px;
 }
 
 .right_section {
@@ -100,6 +145,22 @@
 
 .notifications_icon {
   height: 24px;
+}
+
+.notification_icon_container {
+  position: relative;
+}
+
+.notifications_count {
+  position: absolute;
+  top: -2px;
+  right: -5px;
+  background-color: rgb(200, 0, 0);
+  color: white;
+  font-family: Roboto, Arial;
+  font-size: 11px;
+  padding: 2px 5px;
+  border-radius: 10px;
 }
 
 .channel_user_picture {
