--- a/styles/sidebar.css
+++ b/styles/sidebar.css
@@ -5,4 +5,27 @@
   top: 55px;
   background-color: white;
   width: 72px;
+  z-index: 200;
+  padding-top: 5px;
+}
+
+.sidebar_link {
+  height: 76px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-direction: column;
+  cursor: pointer;
+}
+
+.sidebar_link:hover {
+  background-color: rgb(235, 235, 235);
+}
+
+.sidebar_link img {
+  height: 24px;
+}
+.sidebar_link div {
+  font-family: Roboto, Arial, Helvetica, sans-serif;
+  font-size: 10px;
 }
